Scaffold around API spec
