# src/models/InventoryItem.js
@@ -1,11 +1,0 @@
-export default class InventoryItem {
-    /**
-     * Unique ID of the material, part, or product
-     * @type {string}
-     */
-    id;
-
-    constructor(){
-        this.id
-    }
-}
